src/test/deca/context/invalid/resultats/test_environment-cont.res
./src/test/deca/context/invalid/test_environment.deca:33:11: The method getY is not defined for the class B
